--- a/FunctionCalling/FunctionCalling.csproj
+++ b/FunctionCalling/FunctionCalling.csproj
@@ -5,7 +5,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <UserSecretsId>18f2788f-ae97-45a1-9a73-f7356a0f368c</UserSecretsId>
+    <UserSecretsId>b0ebe6f9-e3ff-48d1-9f17-bd592af23870</UserSecretsId>
+	<NoWarn>$(NoWarn);CS8618,IDE0009,CA1051,CA1050,CA1707,CA1054,CA2007,VSTHRD111,CS1591,RCS1110,RCS1243,CA5394,SKEXP0001,SKEXP0010,SKEXP0020,SKEXP0040,SKEXP0050,SKEXP0060,SKEXP0070,SKEXP0101,SKEXP0110</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
