--- a/NativePlugins/NativePlugins.csproj
+++ b/NativePlugins/NativePlugins.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.14.0" />
   </ItemGroup>
 
